// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrape next site with instant scraper should group each image into a separate slot, in order 1`] = `
Array [
  Array [
    Object {
      "downloadData": "[\\"http://scrape-next-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "downloadData": "[\\"http://scrape-next-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "downloadData": "[\\"http://scrape-next-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "downloadData": "[\\"http://scrape-next-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`scrape next site with instant scraper should group tags and images together that were found on the same page 1`] = `
Array [
  Array [
    Object {
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "downloadData": "[\\"http://scrape-next-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "downloadData": "[\\"http://scrape-next-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "downloadData": "[\\"http://scrape-next-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "downloadData": null,
      "parsedValue": "three",
      "scraper": "tag",
    },
    Object {
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "downloadData": "[\\"http://scrape-next-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;

exports[`scrape next site with psuedo-random delayed scraper should keep images and tags together, in order 1`] = `
Array [
  Array [
    Object {
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "downloadData": "[\\"http://scrape-next-site.com/image/the.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "downloadData": null,
      "parsedValue": "one",
      "scraper": "tag",
    },
    Object {
      "downloadData": null,
      "parsedValue": "two",
      "scraper": "tag",
    },
    Object {
      "downloadData": "[\\"http://scrape-next-site.com/image/quick.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "downloadData": "[\\"http://scrape-next-site.com/image/brown.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
  Array [
    Object {
      "downloadData": null,
      "parsedValue": "three",
      "scraper": "tag",
    },
    Object {
      "downloadData": null,
      "parsedValue": "four",
      "scraper": "tag",
    },
    Object {
      "downloadData": null,
      "parsedValue": "five",
      "scraper": "tag",
    },
    Object {
      "downloadData": "[\\"http://scrape-next-site.com/image/fox.jpg\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "parsedValue": "",
      "scraper": "image",
    },
  ],
]
`;
